--- a/css/style.css
+++ b/css/style.css
@@ -1,271 +1,205 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 
-:root {
-    --background: rgb(255 255 255 / 55%);
-}
+/* usage */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  outline: none;
+  list-style: none;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* gap: 1px; */
-    background: rgba(255, 255, 255, 0.80);
-    font-family: 'Roboto', sans-serif !important;
-    background: linear-gradient(135deg, #2980b9 -20%, #6dd5FA 120%);
-    padding: 10px;
-    color: #444;
+  /* background-color: #94acdb; */
+  background: radial-gradient(#424242, #2d2d2d);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, auto);
-    width: 550px;
-    height: 100%;
-    min-height: 400px;
-    overflow: auto;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  background-color: #3b3b3b;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.753);
+  border-radius: 20px;
 }
 
-.container>* {
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 1px 6px 0px #33333340;
+.current-weather {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 496px;
+  height: 270px;
+  padding: 20px;
+  border-bottom: 1px dashed #ffffff1f;
 }
 
-.input-navbar {
-    grid-column: 4 span;
-    /* width: 100%;
-    margin: 0 auto; */
+.current-weather .section {
+  display: flex;
+  justify-content: space-between;
+  color: #333;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+.info-boxes {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  width: 100%;
+}
+.info-boxes .box i {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+.info-boxes .box span {
+  font-size: 12px;
+}
+.time-line {
+  width: 496px;
+  padding: 20px 25px;
+  border-radius: 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-#input-city {
-    padding: 15px;
-    border: none;
-    font-size: 22px;
-    font-weight: 500;
-    text-align: center;
-    background: transparent;
-    width: 100%;
-    height: 100%;
+.current-weather .box {
+  color: rgba(255, 255, 255, 0.418);
+  font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  /* margin-bottom: 5px; */
 }
 
-
-
-.now {
-    grid-column: 4 span;
-    display: flex;
-    padding: 10px 0px;
-    /* gap: 10px; */
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-
+.position {
+  font-size: 18px;
+  font-weight: 500;
+  background-color: transparent;
+  border: none;
+  color: #b6b6b6;
+}
+.position::selection {
+  background-color: #ccc;
 }
 
-.direction img {
-    transition: .25s ease-in-out;
+.main-temperature {
+  font-size: 100px;
+  font-weight: 400;
+  height: 120px !important;
+  color: #b6b6b6;
+  display: block;
 }
 
-.summary {
-    margin-top: 5px;
-    /* text-align: center; */
-    font-size: 15px;
-    text-transform: capitalize;
-    position: absolute;
-    top: 10px;
-    left: 10px;
+.main-icon {
+  width: 170px;
+  scale: 1;
+  filter: drop-shadow(1px 5px 2px #00000040);
 }
 
-
-.now .icon {
-
-    filter: drop-shadow(0px 1px 1px rgba(97, 63, 97, 0.35));
-    width: 200px !important;
-    height: 200px;
-    transform: scale(1.2);
-
+.main-icon img {
+  /* scale: 1.1; */
+  width: 100%;
+  height: 179px;
+  height: 100%;
 }
 
-.info {
-    grid-column: 2 span;
-    padding: 5px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-
+.time-line {
+  flex-direction: column;
+  min-height: 180px;
+  overflow: hidden;
+  padding: 15px;
+}
+.time-line ul {
+  display: flex;
+  gap: 10px;
+  font-weight: 500;
+  /* margin-bottom: 10px; */
+  font-size: 12px;
+  color: #b6b6b64d;
+  justify-content: center;
+  width: 100%;
+}
+.time-line ul li.active {
+  color: #b6b6b6;
+}
+.row-container {
+  overflow: auto;
+  width: 100%;
+}
+.time-line .row {
+  display: flex;
+  width: 100%;
+  gap: 14px;
+  /* overflow: scroll; */
+  padding-bottom: 2px;
+  /* padding-right: 10px; */
 }
 
-.box {
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.time-line .box {
+  height: 110px;
+  width: 65px !important;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  color: #b6b6b6;
+  position: relative;
 }
 
-.box img {
-    width: 85%;
+.time-line .box::before {
+  position: absolute;
+  content: attr(time);
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 15px;
+  width: 100%;
+  text-align: center;
+}
+.time-line .box::after {
+  position: absolute;
+  content: attr(temp);
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
-.box:last-of-type {
-    justify-content: center;
+.time-line .box img {
+  width: 65px !important;
+  filter: drop-shadow(0px 2px 5px #00000040);
+  height: 65px !important;
+  scale: 1.1;
 }
 
-.info .box::before {
-    content: attr(data-value);
-    position: absolute;
-    bottom: 10px;
-    left: 0;
-    font-size: 13px;
-    font-weight: 500;
-    width: 100%;
-    text-align: center;
-    color: #333;
+/********************/
+::-webkit-scrollbar {
+  height: 1px !important;
+  padding: 5px 5px;
 }
 
-
-.sun-widget {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-column: 2 span;
-    padding: 10px 0;
+::-webkit-scrollbar-track {
+  padding: 15px 5px;
 }
-
-.sun-widget::before,
-.sun-widget::after {
-    width: fit-content;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 87%;
-    font-size: 14px;
-    font-weight: 500;
+::-webkit-scrollbar-thumb {
+  background-color: #b6b6b600;
+  border-radius: 15px;
 }
-
-.sun-widget::before {
-    content: attr(data-sunrise);
-    left: 10%;
-
-}
-
-.sun-widget::after {
-    content: attr(data-sunset);
-    right: -4%;
-}
-
-svg {
-    fill: transparent;
-    width: 350px;
-    height: 160px;
-    z-index: 6;
-    filter: drop-shadow(0px 3px 3px rgba(97, 63, 97, 0.35));
-}
-
-circle {
-    stroke: #75757513;
-    stroke-width: 5px;
-    z-index: 50;
-    stroke-dasharray: 603;
-    stroke-dashoffset: 301;
-    stroke-linecap: round;
-    transform: rotate(180deg);
-    transform-origin: 50% 50%;
-}
-
-
-.day {
-    stroke: #f9b40c;
-    stroke-dashoffset: 603;
-}
-
-.night {
-    stroke-dashoffset: 603;
-    stroke: #76BBD7;
-}
-
-.dayIcon {
-    width: 50px;
-    height: 50px;
-    left: -4px;
-    top: 65%;
-    transform: rotate(0deg);
-    transform-origin: 136px 50%;
-    position: absolute;
-    z-index: 20;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: drop-shadow(0px 2px 2px rgba(97, 63, 97, 0.25));
-
-}
-
-
-img {
-    width: 100%;
-}
-
-
-
-.week {
-    grid-column: 4 span;
-    padding: 10px 0;
-    /* width: 100%; */
-    height: 120px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.week .box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: calc(100% /7);
-    height: 100%;
-    filter: drop-shadow(0px 1px 1px rgba(97, 63, 97, 0.35));
-}
-
-.week .box img {
-    width: 80%;
-}
-
-.week .box::before {
-    content: attr(data-date);
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    /* padding: 10px; */
-    font-size: 12px;
-    font-weight: 500;
-    /* background-color: #444; */
-    width: 100%;
-    /* height: 50px; */
-    text-align: center;
-    color: #333;
-    /* display: block; */
-}
-
-.week .box::after {
-    content: attr(data-temp);
-    position: absolute;
-    top: 0px;
-    left: 0;
-    /* padding: 10px; */
-    font-size: 12px;
-    font-weight: 500;
-    /* background-color: #444; */
-    width: 100%;
-    /* height: 50px; */
-    text-align: center;
-    color: #333;
-    /* display: block; */
+:hover::-webkit-scrollbar-thumb {
+  background-color: #b6b6b61e;
 }
