--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 body {
   /* background-color: #94acdb; */
-  background: radial-gradient(#424242, #2d2d2d);
+  background: #111111;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,19 +24,17 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  background-color: #3b3b3b;
-  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.753);
-  border-radius: 20px;
+  overflow: auto;
+  height: 100%;
+  padding: 30px;
+  width: 1250px;
 }
 
 .current-weather {
   display: flex;
   flex-direction: column;
+  flex: 1;
   justify-content: space-between;
-  width: 496px;
-  height: 270px;
-  padding: 20px;
-  border-bottom: 1px dashed #ffffff1f;
 }
 
 .current-weather .section {
@@ -46,30 +44,36 @@ body {
   text-transform: capitalize;
   font-weight: 500;
 }
-.info-boxes {
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  width: 100%;
+.now {
+  color: #bbb;
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: uppercase;
 }
-.info-boxes .box i {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
+
+.position {
+  font-size: 3em;
+  margin-top: 10px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  background-color: transparent;
+  border: none;
+  color: #eee;
 }
-.info-boxes .box span {
-  font-size: 12px;
-}
-.time-line {
-  width: 496px;
-  padding: 20px 25px;
-  border-radius: 20px;
+.main-temperature {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  align-items: flex-end;
+  font-size: 160px;
+  font-weight: 500;
+  margin-top: 110px;
+  color: #fbbd22;
+  display: block;
+}
+.description,
+.feel-like {
+  color: #ffffffad;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .current-weather .box {
@@ -82,124 +86,97 @@ body {
   /* margin-bottom: 5px; */
 }
 
-.position {
-  font-size: 18px;
-  font-weight: 500;
-  background-color: transparent;
-  border: none;
-  color: #b6b6b6;
-}
 .position::selection {
-  background-color: #ccc;
-}
-
-.main-temperature {
-  font-size: 100px;
-  font-weight: 400;
-  height: 120px !important;
-  color: #b6b6b6;
-  display: block;
+  background-color: #555;
 }
 
 .main-icon {
-  width: 170px;
-  scale: 1;
-  filter: drop-shadow(1px 5px 2px #00000040);
+  width: 350px;
+  scale: 1.2;
 }
 
 .main-icon img {
-  /* scale: 1.1; */
   width: 100%;
-  height: 179px;
-  height: 100%;
 }
 
-.time-line {
-  flex-direction: column;
-  min-height: 180px;
-  overflow: hidden;
-  padding: 15px;
-}
-.time-line ul {
+ul {
   display: flex;
   gap: 10px;
   font-weight: 500;
-  /* margin-bottom: 10px; */
+  margin-bottom: 10px;
   font-size: 12px;
   color: #b6b6b64d;
   justify-content: center;
   width: 100%;
 }
-.time-line ul li.active {
+ul li.active {
   color: #b6b6b6;
 }
-.row-container {
-  overflow: auto;
-  width: 100%;
-}
-.time-line .row {
+
+.time-line {
   display: flex;
-  width: 100%;
-  gap: 14px;
-  /* overflow: scroll; */
-  padding-bottom: 2px;
-  /* padding-right: 10px; */
+  gap: 15px;
+  padding-bottom: 5px;
 }
 
 .time-line .box {
-  height: 110px;
-  width: 65px !important;
+  min-width: 187px !important;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   justify-content: space-between;
-  align-items: center;
-  font-weight: 500;
+
   color: #b6b6b6;
   position: relative;
+  background: #1e1e1e;
+  padding: 12px;
+  border-radius: 5px;
 }
-
-.time-line .box::before {
-  position: absolute;
-  content: attr(time);
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 15px;
-  width: 100%;
-  text-align: center;
-}
-.time-line .box::after {
-  position: absolute;
-  content: attr(temp);
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+.time-line .box .day {
+  text-transform: capitalize;
   font-size: 14px;
-  text-align: center;
-  width: 100%;
-  text-align: center;
+}
+.time-line .box .info {
+  display: flex;
+  justify-content: space-between;
+}
+.time-line .box .text {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 24px;
+  color: #ffffffad;
 }
 
+.time-line .box .text strong {
+  color: #eee;
+}
+.time-line .box .text .temp-day {
+  font-size: 40px;
+}
+.time-line .box .icon {
+  width: 45%;
+  height: 100%;
+}
 .time-line .box img {
-  width: 65px !important;
+  width: 100% !important;
   filter: drop-shadow(0px 2px 5px #00000040);
-  height: 65px !important;
-  scale: 1.1;
+  scale: 1.4;
 }
 
 /********************/
 ::-webkit-scrollbar {
-  height: 1px !important;
-  padding: 5px 5px;
+  height: 0px !important;
 }
 
 ::-webkit-scrollbar-track {
   padding: 15px 5px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #b6b6b600;
+  background-color: #333;
   border-radius: 15px;
 }
-:hover::-webkit-scrollbar-thumb {
-  background-color: #b6b6b61e;
+.time-line:hover::-webkit-scrollbar-thumb {
+  background-color: #666;
 }
